<resources>
    <string name="app_name">KidsToDoApp</string>
    <string name="title_activity_trophy_case">TrophyCase</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="back_to_home">Back to Home</string>
    <string name="earned">Earned</string>
    <string name="available">Available</string>
    <string name="points">Points:</string>
    <string name="todo">TODO</string>
    <string name="editeventsfragment">EditEventsFragment</string>
    <string name="icecream_with_family">Icecream With Family!</string>
    <string name="cost_50_points">Cost 50 points</string>
    <string name="back_to_trophy_case">Back to Trophy Case</string>
    <string name="buy">Buy</string>

    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="p">p</string>
    <string name="password">Password:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="enter">Enter</string>
    <string name="add_task">Add Task</string>
    <string name="add_trophy">Add Trophy</string>
    <string name="pm">pM</string>
    <string name="trophy_case">Trophy Case</string>
    <string name="add">+</string>
    <string name="cancel">Cancel</string>
    <string name="trophy_name">Trophy Name</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="select_trophy_icon">Select Trophy Icon</string>
    <string name="point">Points</string>
</resources>